# MonoGame-Level-Editor

./: .clang-format  .clang-format-old  .gitignore  CMakeLists.txt  README.md  build-and-run.sh  caspian.cpp  caspian.h  caspian.pro  caspian.ui  caspian.ui.autosave  compile_commands.json  config.cpp  config.h  customtoolbar.cpp  customtoolbar.h  doublespinboxwidget.cpp  doublespinboxwidget.h  draggablelabel.cpp  draggablelabel.h  filebrowsewidget.cpp  filebrowsewidget.h  main.cpp  maingraphicsview.cpp  maingraphicsview.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  selectablelabel.cpp  selectablelabel.h  spinboxwidget.cpp  spinboxwidget.h
caspian-local/: preferences.ini
src/command/: command.cpp  command.h  commandhistory.cpp  commandhistory.h  compoundpaintcommand.cpp  compoundpaintcommand.h  paintcommand.cpp  paintcommand.h  texturemanager.cpp  texturemanager.h
src/core/: actions.cpp  actions.h  caspian.cpp  caspian.h  caspian.ui  caspian_propertiestable.cpp  caspian_scrollmenu.cpp  caspian_statusbar.cpp  caspian_toolbar.cpp  customtoolbar.cpp  customtoolbar.h  init.cpp  main.cpp  maingraphicsview.cpp  maingraphicsview.h  misc.cpp  propertiestable.cpp  propertiestable.h  scrollmenu.cpp  scrollmenu.h  selectablelabel.cpp  selectablelabel.h  statusbar.cpp  statusbar.h  texturemanager.cpp  texturemanager.h  toolbar.h  utility.cpp  utility.h
src/deprecated/: paintcommand.cpp  paintcommand.h
src/level/: level.cpp  level.h  levelheader.cpp  levelheader.h  tile.cpp  tile.h
src/preferences/: config.cpp  config.h  doublespinboxwidget.cpp  doublespinboxwidget.h  filebrowsewidget.cpp  filebrowsewidget.h  preferences.cpp  preferencesdialog.cpp  preferencesdialog.h  spinboxwidget.cpp  spinboxwidget.h
test/: chunk.h  chunkheader.cpp  chunkwriter.cpp  example.level  level.cpp  level.h  levelchunkparser  levelchunkparser.cpp  levelheader.cpp  levelparser.cpp  levelwriter  levelwriter.cpp  notes  tile.cpp  tile.h
test/chunk/: chunk.h  chunkheader.cpp  chunkwriter  chunkwriter.cpp  example.chunk
